# bcd-convert

./: Cargo.toml  Makefile  README.md
.github/workflows/: test.yml
src/: lib.rs
